# gui-osg_qt4

./: CMakeLists.txt  README.md  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  GraphicsWindowQt.cpp  Main.cpp  QGraphicsViewAdapter  QGraphicsViewAdapter.cpp  osgQt.pc.in  osgQt5.pc.in
test/: CMakeLists.txt  suite.cpp  test_Dummy.cpp
